@@ -14,6 +14,8 @@ mono (2.4+dfsg-1~pre1) unstable; urgency=low
       will ship the assemblies with the release containing Silverlight 2.0
       support.
     + Build MonoGetAssemblyName using gmcs instead of mcs.
+    + Don't allow dh_clideps to add mono-runtime dependencies to
+      mono-1.0/2.0-gac to prevent circular dependency hell. (Closes: #528090)
   * debian/README.source:
     + Mention which files we removed and how to create the tarball we use.
     + Document which binaries are required to bootstrap the C# compiler.
